--- a/client/src/GlobalStyle/Layout.css
+++ b/client/src/GlobalStyle/Layout.css
@@ -27,4 +27,15 @@
   .mt-2{
     margin-top: 2rem;
   }
-  
+
+  .mb-1{
+    margin-bottom: 0.5rem;
+  }
+
+/* Auth card container */
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+}
